testdata/valid/basic_14.lisp
(defcolumns (X :i16 :padding 1))
(defconstraint c1 () (!= 0 X))
